# personal-finance-copilot

./: .gitignore  README.md  main.py  pyproject.toml
app/core/: config.py  exceptions.py  logger.py  tables_models.py
app/core/database/: __init__.py  database.py  models.py
app/services/: __init__.py  data_service.py
app/ui/: app.py
data/db/: finance.db
data/raw/: sample_transactions_raw.csv
tests/: test_ollama.py
