[project]
name = "finance-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair==4.2.2",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "streamlit>=1.19.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
